# macro-analytics

./: README.md  alembic.ini  apis.py  database.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: eed8094acb9d_describe_your_changes.py
static/: query.html
