[tool.poetry]
name = "macro-analytics"
version = "0.1.0"
description = "Macro Analytics for the Analyzed JSONs"
authors = ["parikhvedant2003 <parikhvedant2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
fastapi = "^0.128.0"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
python-multipart = "^0.0.20"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
logging = "^0.4.9.6"
alembic = "^1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
